fixed overflowing dishes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,3 +74,8 @@
       @apply bg-background text-foreground;
     }
   }
+
+  html {
+    padding: 0;
+    margin: 0;
+  }
